5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1583.log
== TEST (2019-05-29 14:06:06) 
-- CODE:
st=str(input('st:'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:17:08) 
-- CODE:
from numpy import*
s=input("x: ")
n=[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- EXECUTION TIME:
0.148964
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 3
    n=[0:3]
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:09) 
-- CODE:
from numpy import*
s=input("x: ")
n=[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- ERROR:
File "XXXX", line 3
    n=[0:3]
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:25) 
-- CODE:
from numpy import*
s=input("x: ")
n=[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- ERROR:
File "XXXX", line 3
    n=[0:3]
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:17:36) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- EXECUTION TIME:
0.235024
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 8
    n=n+1"."+[i:k]
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:38) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- ERROR:
File "XXXX", line 8
    n=n+1"."+[i:k]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:17:56) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+s[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- EXECUTION TIME:
0.17317
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 8
    n=n+1"."+s[i:k]
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:17:57) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n=n+1"."+s[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- ERROR:
File "XXXX", line 8
    n=n+1"."+s[i:k]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:18:14) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n+="."+s[i:k]
	i=i+3
	k+=3
	j+=3
print n
-- ERROR:
File "XXXX", line 12
    print n
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(n)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:18:29) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n+="."+s[i:k]
	i=i+3
	k+=3
	j+=3
print (n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:18:29) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n+="."+s[i:k]
	i=i+3
	k+=3
	j+=3
print (n)
-- EXECUTION TIME:
0.537434
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
x: 123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
x: 987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:18:38) 
-- CODE:
from numpy import*
s=input("x: ")
n=s[0:3]
j=3
i=3
k=6
while j<len(s):
	n+="."+s[i:k]
	i=i+3
	k+=3
	j+=3
print (n)
-- EXECUTION TIME:
0.351155
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
